# zero2prod

./: .env  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
.sqlx/: query-e5d73fde1abb89f172b12c09f5acca76204004565619fb6892513e7cf7d4398b.json
configuration/: base.yaml
scripts/: init_db.sh
src/: config.yaml  configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
